# dolphin-on-gpu

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  DolphinApp  FINRECAP.md  Makefile  README.md  TODO.md  configure  dolphin  first_test.ipynb  functions.ipynb  pull_data.py
data/cleaned/: 1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  115  116  117  118  120  121  123  124  126  127  128  129  130  131  132  133  134  135  136  137  138  139  142  143  (+430 more)
data/raw/: 1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  135  (+487 more)
doc/: Finance Recap.md  Rapport.md
lib/cvxgen/: Makefile  ldl.c  ldl.cpp  ldl.cu  matrix_support.c  matrix_support.cpp  matrix_support.cu  solver.c  solver.cpp  solver.cu  solver.cuh  solver.h  solver.hpp  util.c  util.cpp
notebooks/: functions.ipynb  rendu.ipynb
notebooks/tests/: functions.ipynb
src/: CMakeLists.txt  parse.cpp  parse.h
src/app/: CMakeLists.txt  main.cc  main.cpp  main.cu  test.cpp
src/finance/: CMakeLists.txt  asset.cpp  asset.cu  asset.cuh  asset.hpp  portfolio.cpp  portfolio.cu  portfolio.cuh  portfolio.hpp
src/helpers/: CMakeLists.txt  combination.cpp  date.cpp  date.cu  date.cuh  date.hpp  parse.cu  parse.cuh
src/optimization/: CMakeLists.txt  optimizer.cpp  optimizer.cu  optimizer.cuh  optimizer.hpp
src/parsing/: CMakeLists.txt  parse.cc  parse.cpp  parse.hh  parse.hpp
tests/: first_test.ipynb
